<resources>
    <string name="app_name">Gallery</string>
    <string name="title_pictures">Pictures</string>
    <string name="title_albums">Albums</string>
    <string name="title_menu">Menu</string>
    <string name="title_trash">Trash Bin</string>
    <string name="action_restore">Restore</string>
    <string name="action_delete_forever">Delete Forever</string>
    <string name="video_indicator_desc">Video thumbnail indicator</string>

    <string name="action_sort">Sort</string>
    <string name="sort_name_asc">Name (A-Z)</string>
    <string name="sort_name_desc">Name (Z-A)</string>
    <string name="sort_date_desc">Last Updated (Newest)</string>
    <string name="sort_date_asc">Last Updated (Oldest)</string>
    <string name="sort_count_desc">Most Pictures</string>
    <string name="sort_count_asc">Least Pictures</string>

    <string name="action_move">Move</string>
    <string name="action_wallpaper">Set Wallpaper</string>
    <string name="wallpaper_error">Cannot set video as wallpaper.</string>
    <string name="delete_success">Moved %d items to trash</string>
    <string name="delete_fail">Failed to move items to trash</string>
    <string name="title_secure_folder">Secure Folder</string>
    <string name="move_to_secure_folder">Move to Secure Folder</string>
    <string name="title_hide_albums">Hide Albums</string>

    <string name="status_hidden">Hidden</string>
    <string name="status_visible">Visible</string>

    <string name="setup_pin_title">Set Up PIN</string>
    <string name="enter_new_pin">Enter a new 4-digit PIN</string>
    <string name="confirm_pin">Confirm your PIN</string>
    <string name="pins_do_not_match">PINs do not match. Please try again.</string>
    <string name="pin_set_successfully">PIN set successfully.</string>
    <string name="enter_pin_title">Enter PIN</string>
    <string name="enter_your_pin">Enter your 4-digit PIN</string>
    <string name="wrong_pin">Wrong PIN. Please try again.</string>

    <string name="action_settings">Settings</string>
    <string name="title_secure_settings">Secure Folder Settings</string>
    <string name="setting_change_pin">Change PIN</string>
    <string name="setting_biometrics_toggle">Enable Biometric Authentication</string>
    <string name="setting_biometrics_subtitle">Use fingerprint or face unlock to access the Secure Folder.</string>

    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="follow_system">Follow System</string>
    <string name="change_app_icon">Change App Icon</string>
    <string name="default_icon">Default Icon</string>
    <string name="icon_variant_1">Icon Variant 1</string>
    <string name="icon_variant_2">Icon Variant 2</string>
    <string name="icon_change_toast">App icon will update shortly.</string>
    <string name="title_settings">Settings</string>

    <string name="title_favorites">Favorites</string>
    <string name="settings_animation">Navigation Animations</string>
    <string name="setting_animation_off">Off (Default)</string>
    <string name="setting_animation_slide">Slide In/Out</string>
    <string name="setting_animation_fly">Fly In/Out</string>
    <string name="setting_animation_fade">Pixel In/Out (Fade)</string>

    <string name="dialog_wallpaper_title">Set Wallpaper Preview</string>
    <string name="dialog_wallpaper_message">Do you want to set this image as your device wallpaper?</string>
    <string name="dialog_confirm_set">Set Wallpaper</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="wallpaper_scale_fill">Fill / Crop</string>
    <string name="wallpaper_scale_fit">Fit</string>
    <string name="wallpaper_scale_stretch">Stretch</string>

    <string name="bottom_nav_color">Bottom Navigation Color</string>
    <string name="pick_color">Pick Color</string>
    <string name="show_album_borders">Show album borders</string>
    <string name="album_border_color">Album border color</string>
    <string name="album_border_width">Album border width</string>
    <string name="pick_border_color">Pick border color</string>
    <string name="width_dp">%1$sdp</string>

    <string name="language">Language</string>
    <string name="language_default">Default (System)</string>
    <string name="language_en">English</string>
    <string name="language_es">Español</string>
    <string name="language_ar">العربية</string>

    <string name="folder_camera">Camera</string>
    <string name="folder_movies">Movies</string>
    <string name="folder_download">Downloads</string>
    <string name="folder_screenshots">Screenshots</string>

    <string name="title_duplicate_finder">Duplicate Finder</string>
    <string name="title_image_shredding">Secure Delete</string>
    <string name="no_duplicates_found">No duplicates found</string>
    <string name="no_images_available">No images available</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="rescan">Rescan</string>
</resources>