<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="Share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_set_wallpaper"
        android:icon="@drawable/ic_wallpaper"
        android:title="@string/action_wallpaper"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_move_to_album"
        android:icon="@drawable/ic_move"
        android:title="@string/action_move"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_move_to_secure_folder"
        android:icon="@drawable/ic_secure_folder"
        android:title="@string/move_to_secure_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete_forever"
        app:showAsAction="ifRoom" />
</menu>