<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_albums">

    <fragment
        android:id="@+id/navigation_pictures"
        android:name="com.bretttech.gallery.ui.pictures.PicturesFragment"
        android:label="@string/title_pictures"
        tools:layout="@layout/fragment_pictures" />

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.bretttech.gallery.ui.albums.AlbumsFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_albums">

        <action
            android:id="@+id/action_navigation_albums_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="com.bretttech.gallery.ui.albums.AlbumDetailFragment"
        android:label="Album Detail"
        tools:layout="@layout/fragment_album_detail" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.bretttech.gallery.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_navigation_menu_to_trashFragment"
            app:destination="@id/trashFragment" />
    </fragment>

    <fragment
        android:id="@+id/trashFragment"
        android:name="com.bretttech.gallery.ui.trash.TrashFragment"
        android:label="@string/title_trash"
        tools:layout="@layout/fragment_trash" />
</navigation>