<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".WallpaperPreviewActivity">

    <ImageView
        android:id="@+id/wallpaper_preview_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_album_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10:09"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="#22FFFFFF"
            android:padding="8dp">
            <ImageView android:layout_width="32dp" android:layout_height="32dp" android:layout_marginHorizontal="16dp" android:src="@drawable/ic_home_black_24dp" android:tint="@android:color/white" />
            <ImageView android:layout_width="32dp" android:layout_height="32dp" android:layout_marginHorizontal="16dp" android:src="@drawable/ic_search" android:tint="@android:color/white" />
            <ImageView android:layout_width="32dp" android:layout_height="32dp" android:layout_marginHorizontal="16dp" android:src="@drawable/ic_dashboard_black_24dp" android:tint="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioGroup
            android:id="@+id/scale_options_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/radio_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/wallpaper_scale_fill"
                android:textColor="@android:color/white"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/radio_fit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallpaper_scale_fit"
                android:textColor="@android:color/white"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/radio_stretch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallpaper_scale_stretch"
                android:textColor="@android:color/white"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_set_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/dialog_confirm_set"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>